--- a/requirements.txt
+++ b/requirements.txt
@@ -1,82 +1,89 @@
 absl-py==0.14.1
-backcall==0.2.0
-beautifulsoup4==4.10.0
-cachetools==4.2.4
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.7
-click==8.0.3
-colorama==0.4.4
-cors==1.0.1
-craft==0.2.6
-craft-text-detector==0.4.0
-dataloader==2.0
-decorator==5.1.0
-easydict==1.9
-filelock==3.3.2
-Flask==2.0.2
-Flask-Cors==3.0.10
-future==0.18.2
-gdown==4.2.0
-gevent==21.8.0
-google-auth==2.3.0
-google-auth-oauthlib==0.4.6
-greenlet==1.1.2
+asn1crypto==0.24.0
+astor==0.8.1
+cached-property==1.5.2
+certifi==2018.1.18
+chardet==3.0.4
+click==8.0.1
+colorama==0.3.7
+command-not-found==0.3
+cryptography==2.1.4
+cubist==0.0.13
+cupshelpers==1.0
+dataclasses==0.8
+defer==1.0.6
+distro-info===0.18ubuntu0.18.04.1
+Flask==2.0.1
+gast==0.5.2
+google-pasta==0.2.0
 grpcio==1.41.0
-idna==3.3
-imutils==0.5.4
-ipython==7.28.0
+h5py==3.1.0
+httplib2==0.9.2
+idna==2.6
+importlib-metadata==4.8.1
 itsdangerous==2.0.1
-jedi==0.18.0
-Jinja2==3.0.2
+Jinja2==3.0.1
 joblib==1.1.0
-keras==2.6.0
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+keyring==10.6.0
+keyrings.alt==3.0
+language-selector==0.1
+launchpadlib==1.10.6
+lazr.restfulclient==0.13.5
+lazr.uri==1.0.3
+lightdm-gtk-greeter-settings==1.2.2
+macaroonbakery==1.1.3
 Markdown==3.3.4
 MarkupSafe==2.0.1
-matplotlib-inline==0.1.3
-natsort==7.1.1
-numpy==1.21.2
-oauthlib==3.1.1
+netifaces==0.10.4
+numpy==1.19.5
+oauth==1.0.1
 opencv-python==4.5.3.56
-pandas==1.3.3
-parso==0.8.2
-phasepack==1.5
-pickleshare==0.7.5
-Pillow==8.3.2
-prompt-toolkit==3.0.20
+pandas==1.1.5
+pexpect==4.2.1
+Pillow==5.1.0
 protobuf==3.18.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.20
-pydicom==2.2.2
-Pygments==2.10.0
-PySocks==1.7.1
+pycairo==1.16.2
+pycrypto==2.6.1
+pycups==1.9.73
+PyGObject==3.26.1
+pymacaroons==0.13.0
+PyNaCl==1.1.2
+pyRFC3339==1.0
+python-apt==1.6.5+ubuntu0.7
 python-dateutil==2.8.2
-pytz==2021.3
-PyYAML==6.0
-requests==2.26.0
-requests-file==1.5.1
-requests-oauthlib==1.3.0
-rsa==4.7.2
-scipy==1.7.1
-SimpleITK==2.1.1
+python-debian==0.1.32
+pytz==2018.3
+pyxdg==0.25
+PyYAML==3.12
+reportlab==3.4.0
+requests==2.18.4
+requests-unixsocket==0.1.5
+scikit-learn==0.24.2
+scipy==1.5.4
+SecretStorage==2.3.1
+simplejson==3.13.2
 six==1.16.0
-soupsieve==2.2.1
-tensorboard==2.7.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorboardX==2.4
+sklearn==0.0
+system-service==0.3
+tensorboard==1.14.0
+tensorflow==1.14.0
+tensorflow-estimator==1.14.0
 termcolor==1.1.0
-tldextract==3.1.2
-torch==1.9.1
-torchaudio==0.9.1
-torchvision==0.10.1+cu102
-tqdm==4.62.3
-traitlets==5.1.0
+threadpoolctl==3.0.0
 typing-extensions==3.10.0.2
-urllib3==1.26.7
-variable==0.0.4
-wcwidth==0.2.5
+ubuntu-advantage-tools==27.2
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+urllib3==1.22
+usb-creator==0.3.3
+wadllib==1.3.2
 Werkzeug==2.0.2
-zope.event==4.5.0
-zope.interface==5.4.0
+wrapt==1.13.1
+xkit==0.0.0
+zipp==3.6.0
+zope.interface==4.3.2
+
+torch~=1.10.0
+easydict~=1.9
